Features added: create game, completed game, changed ui of stat keeping, authentication jwt, bcrpyt password.